# rusticrayz

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: raytracer.wgsl  screen.wgsl
examples/: cornell_box.rs  earth.rs  emissive_walls.rs  one-weekend-final-scene.rs  quads.rs  simple_light.rs  two_perlin_spheres.rs  two_spheres.rs
link-dynamic/: Cargo.toml
link-dynamic/src/: lib.rs
src/: aabb.rs  app.rs  bvh.rs  camera.rs  color.rs  compute.wgsl  hittable.rs  instance.rs  layer.rs  lib.rs  main.rs  main.rs.bak  material.rs  mesh.rs  mesh_material.rs  ray.rs  raytracer.rs  scene.rs  screen.rs  screen.wgsl  shapes.rs  sphere.rs  texture.rs  triangle.rs  vectors.rs  view.rs
src/mesh_material/: instance.rs  material.rs  mesh.rs
src/shaders/: raytracer.wgsl
src/shapes/: quad.rs  quad_box.rs
