[package]
name = "rusticrayz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
wgpu = "0.17"
glam = { version = "0.25", features = ["bytemuck", "rand"] }
bytemuck = "1.14"
rand = "0.8"
itertools = "0.12"
bvh = "0.7"

bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_mod_debugdump = "0.9"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
