[package]
name = "rusticrayz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
bvh = "0.7"

bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_mod_debugdump = "0.9"
bevy-inspector-egui = "0.22"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
